--- a/lab/prometheus.yml
+++ b/lab/prometheus.yml
@@ -1,5 +1,6 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 10s # frequency for alert detection
 
 storage:
   tsdb:
@@ -9,6 +10,7 @@ storage:
 scrape_configs:
   - job_name: node-exporters
     scrape_interval: 5s
+    evaluation_interval: 5s # frequency for alert detection
     static_configs:
       - targets:
           - 51.159.232.57:9100
@@ -53,4 +55,12 @@ scrape_configs:
           provider: scaleway
           system: debian
 
-
+  - job_name: static-metrics
+    scrape_interval: 2s
+    static_configs:
+      - targets:
+          - 192.168.1.29:8282
+          - 192.168.1.29:8383
+        labels:
+          app: static
+          purpose: demo
